force-app/main/default/objects/EinsteinAPISettings__c/EinsteinAPISettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Einstein API Settings</label>
</CustomObject>