force-app/main/default/objects/EinsteinAPISettings__c/fields/RegisteredEmail__c.field-meta.xml
<CustomField>
    <fullName>RegisteredEmail__c</fullName>
    <label>Registered Email</label>
    <type>Email</type>
</CustomField>