force-app/main/default/objects/EinsteinAPISettings__c/fields/SentimentEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SentimentEndpoint__c</fullName>
    <label>Sentiment Endpoint</label>
    <type>TextArea</type>
</CustomField>