force-app/main/default/objects/EinsteinAPISettings__c/fields/TokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpoint__c</fullName>
    <label>Token Endpoint</label>
    <type>TextArea</type>
</CustomField>