force-app/main/default/objects/EinsteinAPISettings__c/fields/TokenExpirationSeconds__c.field-meta.xml
<CustomField>
    <fullName>TokenExpirationSeconds__c</fullName>
    <label>Token Expiration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>